# Substrate-Client-Runtime-Interface

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/my-runtime-api/: Cargo.toml
primitives/my-runtime-api/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
